--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1067,13 +1067,18 @@ A critical aspect of our Fair-by-Design workflow revolves around the selection a
 
 In the Fairness through Unawareness algorithms, particularly via Apriori and FP-growth, the Disparate Impact metric takes on a distinctive form. Here, each row in the FP-growth dataset undergoes a tailored treatment. The value of the antecedent is considered the privileged value for the attribute, while the value of the consequent is treated as the outcome. This nuanced interpretation aligns with the intricacies of our workflow, enhancing the relevance and effectiveness of the fairness assessment within the Unawareness paradigm.
 
-\lstinputlisting[
+\begin{center}[h]
+
+    \lstinputlisting[
 	float,
 	language=Python,
 	caption={Customized Disparate Impact implementation for Association Rule Mining},
-	label={lst:di_custom},
-    h
+	label={lst:di_custom}
 ]{listings/customized_disparate_impact.py}
+
+
+\end{center}
+
 
 Key elements of this code, before to report the probability computation that is the core of the Disparate Impact metric are the concepts of antecedent and consequent:
 
@@ -1087,6 +1092,8 @@ Key elements of this code, before to report the probability computation that is 
 
 The format "attribute = value" has been imposed to make it easier to interpret the results of the association rule mining process. It simplifies the extraction of relevant information from the antecedent and consequent strings.
 
+\begin{center}[h]
+
 \lstinputlisting[
 	float,
 	language=Python,
@@ -1094,18 +1101,22 @@ The format "attribute = value" has been imposed to make it easier to interpret t
 	label={lst:prob_computation},
 ]{listings/probability_computation.py}
 
+\end{center}
+
 This code allows the probability computation considering, as specified above, as privileged group the one having the value of the antecedent.
 
 \section{Data Generation in Fairness through Rebalancing}
 
 An essential facet of the Fairness through Rebalancing algorithm within our workflow lies in the nuanced process of generating data to augment the dataset. At each iteration of the algorithm, the combination value is selected, pinpointing the subset of the dataframe where that specific combination occurs. Within this subset, a meticulous computation unfolds.
 
+\begin{center}[h]
 \lstinputlisting[
 	float,
 	language=Python,
 	caption={Frequent values in the sub-dataset},
 	label={lst:frequent_value},
 ]{listings/frequent_value.py}
+\end{center}
 
 For each value outside the combination set, the algorithm discerns both the least frequent and most frequent occurrences. The next step involves randomly selecting a value for the new row to be added to the dataset. This random selection occurs within the range defined by the least frequent and most frequent values. The careful orchestration of this process ensures that the augmented dataset maintains statistical coherence while introducing the necessary variations to rebalance the fairness aspects within the model.
 
