fix: maybe fixed

--- a/thesis-style.sty
+++ b/thesis-style.sty
@@ -13,6 +13,7 @@
 \usepackage{geometry}
 \usepackage{listings}
 \usepackage{ifthen}
+\usepackage{float}
 
 % \usepackage[disable]{todonotes} % decommentare prima della versione finale
 %\usepackage{todonotes} % commentare prima della versione finale
@@ -63,6 +64,7 @@
 \Crefname{lstlisting}{Listing}{\lstlistingname}
 
 \lstset{
+	float=h
 	showstringspaces=false,
 	basicstyle=\ttfamily,
 	commentstyle={\color{olive}},
