--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1071,8 +1071,7 @@ In the Fairness through Unawareness algorithms, particularly via Apriori and FP-
 	%float,
 	language=Python,
 	caption={Customized Disparate Impact implementation for Association Rule Mining},
-	label={lst:di_custom},
-    h
+	label={lst:di_custom}
 ]{listings/customized_disparate_impact.py}
 
 Key elements of this code, before to report the probability computation that is the core of the Disparate Impact metric are the concepts of antecedent and consequent:
