technical details almost completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1048,7 +1048,47 @@ This algorithm adds rows to the dataset until every combination have the same fr
 
 This chapter delves into the intricate technical details of the Fair-by-Design workflow, providing an in-depth exploration of the tools, methodologies, and algorithms employed to ensure fairness and equity in the development of machine learning models.
 
-\section{Software Design and Architectures}
+\section{Integration of the Fair-by-Design Workflow into Software Design and Architecture}
+
+The software architecture, developed within the scope of this research, is intricately designed to align with the principles of the Fair-by-Design workflow. This intentional integration serves as a foundational underpinning, ensuring that ethical considerations, specifically the mitigation of biases, are interwoven throughout the entire development lifecycle. The subsequent sections delineate the meticulous influence of the Fair-by-Design workflow on the software design and architecture.
+
+\subsection{Adaptive Data Acquisition}
+
+The software's data acquisition module embodies adaptability and sophistication. Beyond conventional data collection practices, it facilitates nuanced interactions with stakeholders to comprehend the motivations behind including specific attributes, particularly those deemed sensitive. This adaptability proves indispensable, especially when sensitive attributes are deliberate business choices. The software employs common-sense reasoning algorithms to discern latent sensitive attributes, contributing to a comprehensive and contextually relevant data acquisition strategy aligned with the Fair-by-Design ethos.
+
+Moreover, the software seamlessly incorporates the Disparate Impact metric into the fabric of the fairness assessment during data acquisition. This integration is not an auxiliary operation but a deliberate design choice. The software automates statistical testing and quantitative analyses, offering practitioners actionable insights into potential biases within the dataset. This meticulous upfront evaluation lays the foundation for subsequent ethical decision-making and ensures the cultivation of an unbiased dataset.
+
+\subsection{Robust Data Pre-processing Strategies}
+
+The data pre-processing stage within the software is characterized by a two-fold approach, adhering to the principles outlined in the Fair-by-Design workflow. The conventional pre-processing steps, such as handling missing values and ensuring data completeness, are augmented with tailored strategies for handling protected attributes and the output variable. The binary encoding of protected attributes and nuanced treatment of the output variable are seamlessly integrated into the software's pre-processing pipeline.
+
+Additionally, the software accommodates fairness pre-processing algorithms, providing practitioners with a menu of approaches ranging from Fairness through Unawareness with Proxy Detection to Fairness through Data Rebalancing. A carefully designed interface allows practitioners to select the fairness metric before applying these algorithms, providing the flexibility needed to align the software's behavior with the specific fairness considerations outlined in the workflow.
+
+\subsection{Algorithmic Transparency and Selection}
+
+The software architecture places a premium on algorithmic transparency. Each fairness pre-processing algorithm is implemented with precision and accompanied by comprehensive documentation. This transparency is not merely a procedural requirement but a deliberate choice to empower practitioners with the necessary knowledge to make informed decisions.
+
+The flexibility in algorithm selection is a key architectural feature. The software does not impose a rigid framework but rather presents practitioners with a selection of fairness pre-processing algorithms, each with distinct design philosophies. This modular approach allows practitioners to tailor the software's behavior based on the specific requirements of their use case and the intricacies of the dataset.
+
+\subsection{Integration of Fairness Metrics in Performance Evaluation}
+
+The performance evaluation phase within the software's architecture goes beyond conventional accuracy-based assessments. It seamlessly incorporates fairness metrics, specifically Equalized Odds and Demographic Parity, into the evaluation process. The software furnishes a detailed breakdown of these metrics, offering granular insights into how the model performs across diverse demographic groups. This architectural choice ensures that the evaluation is not solely based on technical performance but is enriched with a comprehensive fairness analysis.
+
+The software's architecture supports dynamic selection of fairness metrics, allowing practitioners to prioritize certain fairness considerations based on the context of the AI system. This adaptability in metric selection ensures that the software remains versatile and aligned with the evolving landscape of fairness considerations in AI.
+
+\subsection{Advantages of Tailoring Software to the Workflow}
+
+Aligning the software design and architecture with the Fair-by-Design workflow yields several advantages. Firstly, it ensures that fairness is not an ancillary consideration but an integral aspect of the development process. This proactive approach minimizes the risk of embedding biases in the model, elevating the ethical integrity of the AI system.
+
+Secondly, the tailored software allows practitioners to navigate the nuanced landscape of fairness considerations with ease. The modularity and transparency in algorithmic choices empower practitioners to make decisions aligned with the specific requirements of their use case.
+
+Thirdly, the seamless integration of fairness metrics into the evaluation process provides a holistic view of the model's performance. This approach goes beyond technical accuracy, fostering a more comprehensive understanding of the ethical implications of the AI system.
+
+In essence, by aligning the software design and architecture with the Fair-by-Design workflow, the development process becomes a conscientious journey towards fairness, equity, and responsible AI deployment.
+
+
+
+
 
 
 \section{Tools and Libraries}
